--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>My Grocery List</title>
+    <title>This weeks grocery list</title>
 
     <link rel="stylesheet" href="reset.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,7 +18,7 @@
     <script type="module" src="script.js" defer></script>
   </head>
   <body>
-    <h1 class="title">My Grocery List</h1>
+    <h1 class="title">This weeks grocery list</h1>
     <form class="newGroceryForm">
       <input
         id="newGrocery"
