--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         id="newGrocery"
         autocomplete="off"
         type="text"
-        placeholder="Add an item to your list"
+        placeholder="What do we need this week?"
       />
-      <button id="addBtn" type="submit">Add</button>
+      <button id="addBtn" type="submit">Add to list
+      </button>
     </form>
     <ul id="groceryList"></ul>
   </body>
